@@ -4,6 +4,9 @@ Release ...
 * troff: Do not apply font-specific character translation inside \D,
   which led to wrong output e.g. with \D'l' with an OpenType font with
   the small caps feature activated (bug reported by Russ Cox).
+* dpost: Fixed a case in which invalid backslash sequences were generated
+  when insane sizes appeared in intermediate troff input (bug reported by
+  Russ Cox).
 
 Release 080407
 * [nt]roff: A type definition problem that caused an endless loop on
